# rappi_dashboard

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.github/workflows/: scraper_cron.yml
data/raw/: addresses.csv  rappi_products.json  resolved_addresses.csv
docs/: didi_investigation.md  scraper_methodology.md  scraper_research.md  ~$nsigna.docx
notebooks/: eda_rappi.ipynb
scripts/: generate_addresses.py  get_gdrive_tokens.py  resolve_addresses.py  upload_to_gdrive.py
src/: cli.py
src/dashboard/: app.py  processing.py
src/scraper/: chedraui.py  didi.py  rappi.py  uber_eats.py
tests/: test_scraper.py
